--- a/templates/partials/head.hbs
+++ b/templates/partials/head.hbs
@@ -7,6 +7,6 @@
   integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
   crossorigin="anonymous"
 />
-<link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" href="css/style.min.css" />
 <link rel="icon" href="https://img.icons8.com/dusk/64/000000/chat.png" />
 <title>{{title}}</title>
