--- a/templates/views/chat.hbs
+++ b/templates/views/chat.hbs
@@ -7,7 +7,7 @@
   <div class="chat-container">
     <header class="chat-header">
       	<h1><img class="logo"src="https://img.icons8.com/dusk/64/000000/chat.png" alt=""> Game&Chat</h1>
-      <a href="/" class="btn">Leave Room</a>
+      <a href="/" class="btn-flip" data-back="See you later !" data-front="Leave Room"></a>
     </header>
     <main class="chat-main">
       <div class="chat-sidebar">
