--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -30,6 +30,7 @@
 							<option value="APB Reloaded">APB Reloaded</option>
 							<option value="Among Us">Among Us</option>
 							<option value="Leave me alone room">Leave me alone room</option>
+							<option value="Meat Maro">Meat Maro</option>
 						</select>
 						<button type="submit" class="btn-flip" data-back="Welcom !" data-front="Join Chat"> </button>
 					</div>
